[package]
name = "fuzz"
version = "0.0.0"
authors = ["sorin-petreasca <sorin.petreasca@multiversx.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
num-bigint = "0.4.2"
rand = "0.8.4"

[dependencies.multiversx-sc]
version = "=0.43.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-scenario]
version = "=0.43.2"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.farm-staking]
path = "../../farm-staking/farm-staking"

[dependencies.factory]
path = "../../locked-asset/factory"

[dependencies.pair-mock]
path = "../pair-mock"

[dependencies.price-discovery]
path = "../price-discovery"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dependencies.farm]
path = "../farm"

[dependencies.pair]
path = "../pair"

[dependencies.router]
path = "../router"
