[package]
name = "governance"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "=0.36.1"
features = ["esdt-token-payment-legacy-decode",]

[dev-dependencies.elrond-wasm-debug]
version = "=0.36.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.pair-mock]
path = "../pair-mock"
