[package]
name = "interactor"
version = "0.0.0"
authors = [""]
edition = "2021"
publish = false

[[bin]]
name = "interactor"
path = "src/dex_interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

[dependencies.multiversx-sc-modules]
version = "=0.49.0-alpha.4"

[dependencies.multiversx-sc-snippets]
version = "=0.49.0-alpha.4"

[dependencies.multiversx-sc-scenario]
version = "=0.49.0-alpha.4"

[dependencies.proxies]
path = "proxies"

[dependencies.common_structs]
path = "../../common/common_structs"
