[package]
name = "liquidity-book"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.multiversx-sc]
version = "=0.39.4"
features = ["big-float"]

[dependencies.multiversx-sc-modules]
version = "=0.39.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.39.4"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.token_send]
path = "../../common/modules/token_send"
