[package]
name = "multi_token_farm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.20"
features = ["derive"]

[dependencies.elrond-wasm-derive]
version = "0.20"

[dependencies.elrond-wasm-node]
version = "0.20"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.20"

[dependencies.elrond_dex_pair]
path = "../elrond_dex_pair"

[dependencies.common_structs]
path = "../../common/common_structs"

