[package]
name = "pair"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dependencies.fees-collector]
path = "../../energy-integration/fees-collector"

[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.multiversx-sc]
version = "=0.43.2"
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.2"
