[package]
name = "pair"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.elrond-wasm]
version = "=0.28.0"

[dev-dependencies.elrond-wasm-debug]
version = "=0.28.0"

[dependencies.common_structs]
path = "../../common/common_structs"
